developing active path ways html vue js components

--- a/service-web/src/assets/css/common.css
+++ b/service-web/src/assets/css/common.css
@@ -42,3 +42,9 @@
   color:#fefeff;
 }
 /* End css list with numeber circle background -------------- */
+.mr100- {
+  margin-right: -87px;
+}
+.ml100- {
+  margin-left: -87px;
+}
