--- a/service-web/src/components/header/header.html
+++ b/service-web/src/components/header/header.html
@@ -1,69 +1,33 @@
-<header class="w-100 bg-light-gray vh-75 relative">
-  <div class="db dt-ns mw9-l pa3 ph6-ns center w-100 b--black-40 bb pv3">
-    <div class="db dtc-ns v-mid tl w-20 ">
+<header class="cf w-100 pa3 ph6-ns bg-light-gray">
+  <div class="cf">
+  <div class="db dt-ns mw9-l center w-100 b--black-40 bb pv3">
+    <div class="fl w-20 tl">
       <a href="/" class="dib f5 f4-ns fw6 mt0 mb1 link black-70" title="Home">
         Logo
       </a>
     </div>
-    <nav class="db dtc-ns v-mid w-80 tl tr-ns mt2 mt0-ns">
-      <a title="Documentation" href="/" class="f5 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dib">
+    <div class="w-80 fr">
+    <nav class="tr mt2 mt0-ns menu-header">
+      <a title="Documentation" href="/" class="f5 fw6 link black-70 mr2 mr3-m mr4-l active">
         Home
       </a>
-      <a title="Components" href="/" class="f5 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dib">
+      <a title="Components" href="/" class="f5 fw6 link black-70 mr2 mr3-m mr4-l dib">
         Menu
       </a>
       <a title="Gallery of sites built with Tachyons" href="/gallery/" class="f6 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dib">
         Menu
       </a>
-      <a title="Resources" href="/" class="f5 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dib">
+      <a title="Resources" href="/" class="f5 fw6 link black-70 mr2 mr3-m mr4-l dib">
         Menu
       </a>
-      <a title="Tachyons on GitHub" href="/" class="f5 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dn dib-l">
+      <a title="Tachyons on GitHub" href="/" class="f5 fw6  link black-70 mr2 mr3-m mr4-l dn dib-l">
         Menu
       </a>
-      <a title="Tachyons on GitHub" href="/" class="f5 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dn dib-l">
+      <a title="Tachyons on GitHub" href="/" class="f5 fw6 link black-70 mr2 mr3-m mr4-l dn dib-l">
         Menu
       </a>
     </nav>
   </div>
-  <div class="db fr mw6-l w-100 center bg-white black pv2 ph6 absolute bottom-0 right-0 tl">
-    <h1 class="f1 f1-ns black mb0">Welcome </h1>
-    <p class="lh-copy-l black mt0"> Take your first steps to become more physically active
-    </p>
-    <div class="ph3">
-      <a class="f4 b link dim br1 ph4 pv2 mb2 dib white bg-light-blue" href="#0">Sign up here</a>
-    </div>
+  </div>
   </div>
 </header>
-
-<!--<header class="bg-grey90 cf vh-50">
-  <div class="db dt-ns w-80 center">
-  <div class="cf b&#45;&#45;black-40">
-    <div class="fl w-20 pa2 tl">
-      <a href="/" class="dib f5 f4-ns fw6 mt0 mb1 link black-70" title="Home">
-        Logo
-      </a>
-    </div>
-    <nav class="fr w-80 pa2 tr">
-      <a href="/" class="f6 fw6 hover-black link black-70 fr w-10 pa2">
-        Menu
-      </a>
-      <a href="/" class="f6 fw6 hover-black link black-70 fr w-10 pa2">
-        Menu
-      </a>
-      <a href="/" class="f6 fw6 hover-black link black-70 fr w-10 pa2">
-        Menu
-      </a>
-      <a href="/" class="f6 fw6 hover-black link black-70 fr w-10 pa2">
-        Menu
-      </a>
-      <a href="/" class="f6 fw6 hover-black link black-70 fr w-10 pa2">
-        Menu
-      </a>
-      <a href="/" class="f6 fw6 hover-black link black-70 fr w-10 pa2">
-        Home
-      </a>
-    </nav>
-  </div>
-  </div>
-</header>-->
