--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -1,43 +1,55 @@
 <div class="wrapper">
+  <section class="cf w-100 pa3 ph6-ns bg-light-gray white relative vh-50" id="">
+    <div class="mw9 mw9-ns center tl">
+      <div class="db fr mw6-l w-100 center bg-white black pv2 ph3 ph6-l ph6-m absolute bottom-0 right-0 tl">
+        <h1 class="f1 f1-ns black mb0">Welcome </h1>
+        <p class="lh-copy-l black mt0"> Take your first steps to become more physically active
+        </p>
+        <div class="ph3">
+          <a class="f4 b link dim br1 ph4 pv2 mb2 dib white bg-light-blue" href="#0">Sign up here</a>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="cf w-100 pa3 ph5-m ph6-ns  black" id="">
     <div class="mw9 mw9-ns center tl">
-      <div class="cf mt4">
-        <article class="pv2 fl w-40-m w-100-ns w-50-l pl0 pl2-l tr mt5-l mt2-m mt2-ns">
-          <h1 class="f1 f1-ns black w-70-l fr mt0-ns relative right--2 ">Feel more confident </h1>
-          <div class="cf">
-          <a href="/"
-             class="f4 fw6 light-blue fl no-underline w-100 relative left--2"> Read More <i
-            class=""><img src="../../assets/images/romove-icon.png"/></i></a></div>
-        </article>
-        <article class="pv2 fl w-60-m w-100-ns w-50-l pr0 pr2-l">
-          <img src="../../assets/images/blog-img.jpg"/>
-        </article>
-
-      </div>
-      <div class="cf mt4">
-        <article class="pv2 fl w-60-m w-100-ns w-50-l pr0 pr2-l">
-          <img src="../../assets/images/blog-img.jpg"/>
-        </article>
-        <article class="pv2 fl w-40-m w-100-ns w-50-l pl0 pl2-l tl mt5-l mt2-m mt2-ns">
-          <h1 class="f1 f1-ns black w-70-l fl mt0-ns relative left--2 ">Increase your wellbeing</h1>
+      <div class="dt mw9 center pt0 pb5 pv5-m pv4-ns">
+        <div class="db dtc dtc-ns v-mid ph2 pr0-ns pl0-ns">
+          <h1 class="f4 f1-l f1-m black w-50-l tr fr mt0-ns relative right--2">Feel more confident </h1>
           <div class="cf">
             <a href="/"
-               class="f4 fw6 light-blue fr no-underline w-100 relative right--2"><i
-              class=""><img src="../../assets/images/romove-icon.png"/></i> Read More</a></div>
-        </article>
+               class="f5 f4-l f4-m  fw6 light-blue fl no-underline w-100  tr pr0 pr5-l pr5-m"> Read More <i
+              class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a></div>
+        </div>
+        <div class="db dtc dtc-ns v-mid-ns w-60 w-50-l w-50-m">
+          <img src="http://tachyons.io/img/super-wide.jpg" alt="A bright blue sky" class="w-100" />
+        </div>
       </div>
-      <div class="cf mt4">
-        <article class="pv2 fl w-40-m w-100-ns w-50-l pl0 pl2-l tr mt5-l mt2-m mt2-ns">
-          <h1 class="f1 f1-ns black w-50-l fr mt0-ns  relative right--2 ">Change your life</h1>
+
+      <div class="dt mw9 center pt0 pb5 pv5-m pv4-ns">
+        <div class="db dtc dtc-ns v-mid-ns w-60 w-50-l w-50-m">
+          <img src="http://tachyons.io/img/super-wide.jpg" alt="A bright blue sky" class="w-100" />
+        </div>
+        <div class="db dtc dtc-ns v-mid ph2 pr0-ns pl0-ns">
+          <h1 class="f4 f1-l f1-m black w-60-l tl fl mt0-ns relative left--2">Increase your wellbeing</h1>
           <div class="cf">
             <a href="/"
-               class="f4 fw6 light-blue fl no-underline w-100 relative left--2"> Read More <i
-              class=""><img src="../../assets/images/romove-icon.png"/></i></a></div>
-        </article>
-        <article class="pv2 fl w-60-m w-100-ns w-50-l pr0 pr2-l">
-          <img src="../../assets/images/blog-img.jpg"/>
-        </article>
+               class="f5 f4-l f4-m fw6 light-blue fl no-underline w-100 pl0 pl4-l pl4-m"> Read More <i
+              class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a></div>
+        </div>
+      </div>
 
+      <div class="dt mw9 center pt0 pb5 pv5-m pv4-ns">
+        <div class="db dtc dtc-ns v-mid ph2 pr0-ns pl0-ns">
+          <h1 class="f4 f1-l f1-m black w-40-l tr fr mt0-ns relative right--2">Change your life</h1>
+          <div class="cf">
+            <a href="/"
+               class="f5 f4-l f4-m  fw6 light-blue fl no-underline w-100 tr pr0 pr5-l pr5-m"> Read More <i
+              class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a></div>
+        </div>
+        <div class="db dtc dtc-ns v-mid-ns w-60 w-50-l w-50-m">
+          <img src="http://tachyons.io/img/super-wide.jpg" alt="A bright blue sky" class="w-100" />
+        </div>
       </div>
     </div>
   </section>
