--- a/service-web/src/components/header/header.html
+++ b/service-web/src/components/header/header.html
@@ -1,33 +1,33 @@
-<header class="cf w-100 pa3 ph6-ns bg-light-gray">
-  <div class="cf">
-  <div class="db dt-ns mw9-l center w-100 b--black-40 bb pv3">
-    <div class="fl w-20 tl">
-      <a href="/" class="dib f5 f4-ns fw6 mt0 mb1 link black-70" title="Home">
-        Logo
-      </a>
-    </div>
-    <div class="w-80 fr">
-    <nav class="tr mt2 mt0-ns menu-header">
-      <a title="Documentation" href="/" class="f5 fw6 link black-70 mr2 mr3-m mr4-l active">
-        Home
-      </a>
-      <a title="Components" href="/" class="f5 fw6 link black-70 mr2 mr3-m mr4-l dib">
-        Menu
-      </a>
-      <a title="Gallery of sites built with Tachyons" href="/gallery/" class="f6 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dib">
-        Menu
-      </a>
-      <a title="Resources" href="/" class="f5 fw6 link black-70 mr2 mr3-m mr4-l dib">
-        Menu
-      </a>
-      <a title="Tachyons on GitHub" href="/" class="f5 fw6  link black-70 mr2 mr3-m mr4-l dn dib-l">
-        Menu
-      </a>
-      <a title="Tachyons on GitHub" href="/" class="f5 fw6 link black-70 mr2 mr3-m mr4-l dn dib-l">
-        Menu
-      </a>
-    </nav>
-  </div>
-  </div>
-  </div>
-</header>
+<!--<header class="cf w-100 pa3 ph6-ns bg-light-gray">-->
+  <!--<div class="cf">-->
+    <!--<div class="db dt-ns mw9-l center w-100 b&#45;&#45;black-40 bb pv3">-->
+      <!--<div class="fl w-20 tl">-->
+        <!--<router-link tag="a" :to="{ name: 'landingpage' }" class="dib f5 f4-ns fw6 mt0 mb1 link black-70" title="Home">-->
+          <!--Logo-->
+        <!--</router-link>-->
+      <!--</div>-->
+      <!--<div class="w-80 fr">-->
+        <!--<nav class="tr mt2 mt0-ns menu-header">-->
+          <!--<router-link tag="a" :to="{ name: 'dashboard' }" class="f5 fw6 link black-70 mr2 mr3-m mr4-l active">-->
+            <!--Home-->
+          <!--</router-link>-->
+          <!--<router-link tag="a" :to="{ name: 'dashboard' }" class="f5 fw6 link black-70 mr2 mr3-m mr4-l dib">-->
+            <!--About-->
+          <!--</router-link>-->
+          <!--<router-link tag="a" :to="{ name: '/' }" class="f6 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dib">-->
+            <!--Menu-->
+          <!--</router-link>-->
+          <!--<router-link tag="a" :to="{ name: '/' }" class="f5 fw6 link black-70 mr2 mr3-m mr4-l dib">-->
+            <!--Menu-->
+          <!--</router-link>-->
+          <!--<router-link tag="a" :to="{ name: '/' }" class="f5 fw6  link black-70 mr2 mr3-m mr4-l dn dib-l">-->
+            <!--Menu-->
+          <!--</router-link>-->
+          <!--<router-link tag="a" :to="{ name: '/' }" class="f5 fw6 link black-70 mr2 mr3-m mr4-l dn dib-l">-->
+            <!--Menu-->
+          <!--</router-link>-->
+        <!--</nav>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</header>-->
