--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -1,4 +1,37 @@
 <div class="wrapper">
+  <header class="cf w-100 pa3 ph6-ns bg-light-gray">
+    <div class="cf">
+      <div class="db dt-ns mw9-l center w-100 b--black-40 bb pv3">
+        <div class="fl w-20 tl">
+          <router-link tag="a" :to="{ name: 'landingpage' }" class="dib f5 f4-ns fw6 mt0 mb1 link black-70" title="Home">
+            Logo
+          </router-link>
+        </div>
+        <div class="w-80 fr">
+          <nav class="tr mt2 mt0-ns menu-header">
+            <router-link tag="a" :to="{ name: 'dashboard' }" class="f5 fw6 link black-70 mr2 mr3-m mr4-l active">
+              Home
+            </router-link>
+            <router-link tag="a" :to="{ name: 'dashboard' }" class="f5 fw6 link black-70 mr2 mr3-m mr4-l dib">
+              About
+            </router-link>
+            <router-link tag="a" :to="{ name: '/' }" class="f6 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dib">
+              Menu
+            </router-link>
+            <router-link tag="a" :to="{ name: '/' }" class="f5 fw6 link black-70 mr2 mr3-m mr4-l dib">
+              Menu
+            </router-link>
+            <router-link tag="a" :to="{ name: '/' }" class="f5 fw6  link black-70 mr2 mr3-m mr4-l dn dib-l">
+              Menu
+            </router-link>
+            <router-link tag="a" :to="{ name: '/' }" class="f5 fw6 link black-70 mr2 mr3-m mr4-l dn dib-l">
+              Menu
+            </router-link>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </header>
   <section class="cf w-100 pa3 ph6-ns bg-light-gray white relative vh-50" id="">
     <div class="mw9 mw9-ns center tl">
       <div class="db fr mw6-l w-100 center bg-white black pv2 ph3 ph6-l ph6-m absolute bottom-0 right-0 tl">
