--- a/service-web/src/views/Dashboard/dashboard.html
+++ b/service-web/src/views/Dashboard/dashboard.html
@@ -14,21 +14,21 @@
           <div class="w-100  pa1 tl dark-blue">Program 1</div>
           <div class="cf db">
             <article class="mw7 center ph3 ph5-ns tc br2 pv3">
-              <h2 class="fw2 f4 lh-copy mt0 mb3">
+              <h2 class="fw4 f4 lh-copy mt0 mb3 navy">
                 Day 3 - 01/08
               </h2>
               <h1 class=" b f2 f2-ns navy lh-title mt0 mb3">
                 Enjoy a short walk after lunch to power your brain
               </h1>
-              <p class="fw1 f5 mt0 mb3 w-80 center dark-blue">
+              <p class="fw4 f5 mt0 mb3 w-80 center navy">
                 This will change things. And we want you to be involved. This text needs to be longer for testing sake.
                 Sign up for beta access or learn more about x.
               </p>
               <div>
-                <a class="f6 link dim br-pill ph4 pv2 mb2 mt3 dib white bg-dark-blue" href="#0">
+                <a class="f6 link dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy" href="/">
                   ACCEPT TRAIN
                 </a>
-                <a class="f6 link dim br-pill ph4 pv2 w-100 db mb2 mt3 dib light-blue" href="#0">
+                <a class="f6 link dim br-pill ph4 pv2 w-100 db mb2 mt3 dib light-blue" href="/">
                   SKIP TRAIN TODAY
                 </a>
               </div>
@@ -42,12 +42,13 @@
   <section class="cf w-100 relative">
     <div class="gradient-blue-1 w-100 pv5 absolute h-25 z-0"></div>
     <div class="w-100 w-80-ns center relative">
-      <div class="cf">
+      <div class="cf ">
         <div class="fl w-100 w-50-l pl3 pr3 ">
-          <div class="bg-white br3 shadow-4">
+          <div class="bg-white br3 box-shadow-grey">
             <ul class="list pl0 tl navy">
-              <li class="pa3 pa4-ns bb b--black-10">
-                <b class="db f3 mb1">My journal</b>
+              <li class="pa3 pa4-ns bb b--black-10 pb5-ns">
+                <b class="db f3 mb1 w-70 fl">My journal</b>
+                <div class="db f6 mb1 tr fw6 fr w-30 pr3 light-blue">SEE ALL NOTES</div>
               </li>
               <li class="pa3 pa4-ns bb b--black-10">
                 <span class="f5 db lh-copy measure">
@@ -68,7 +69,7 @@
           </div>
         </div>
         <div class="fl w-100 w-50-l pl3 pr3 ">
-          <div class="bg-white br3 shadow-4">
+          <div class="bg-white br3 box-shadow-grey">
             <ul class="list pl0 tl navy">
               <li class="pa3 pa4-ns bb b--black-10">
                 <b class="db f3 mb1">January 2018</b>
@@ -93,34 +94,35 @@
         </div>
 
         <div class="fl w-100 pl3 pr3 mt3 ">
-          <div class="bg-white br3 shadow-4">
-            <ul class="list pl0 mt0 tl">
+          <div class="bg-white br3 box-shadow-grey">
+            <ul class="list pl0 mt0 tl navy">
               <li
                 class="flex items-center lh-copy pa4 ml4 ph0-l bb b--washed-blue">
-                <b class="db f3 mb1">Activity log</b>
+                <b class="db f3 mb1 w-70 fl">Activity log</b>
+                <div class="db f6 mb1 tr fw6 fr w-30 pr3 light-blue">SEE ALL ACTIVITIES</div>
               </li>
               <li
                 class="flex items-center lh-copy pa3 ph0-l bb b--washed-blue ">
                 <img class="w2 h2 w2-ns h2-ns br-100 ml4" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
                 <div class="pl3 flex-auto">
-                  <span class="f6 db dark-blue">Program 1 Day 3 - 01/08</span>
-                  <span class="f4 fw4 db dark-blue">Medium Hexagon, LLC</span>
+                  <span class="f6 db">Program 1 Day 3 - 01/08</span>
+                  <span class="f5 fw5 db">The positioning of text within the page margins. Alignment</span>
                 </div>
               </li>
               <li
                 class="flex items-center lh-copy pa3 ph0-l bb b--washed-blue ">
                 <img class="w2 h2 w2-ns h2-ns br-100 ml4" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
                 <div class="pl3 flex-auto">
-                  <span class="f6 db dark-blue">Program 1 Day 3 - 01/08</span>
-                  <span class="f4 fw4 db dark-blue">Medium Hexagon, LLC</span>
+                  <span class="f6 db">Program 1 Day 3 - 01/08</span>
+                  <span class="f5 fw5 db">The positioning of text within the page margins. Alignment</span>
                 </div>
               </li>
               <li
                 class="flex items-center lh-copy pa3 ph0-l ">
                 <img class="w2 h2 w2-ns h2-ns br-100 ml4" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
                 <div class="pl3 flex-auto">
-                  <span class="f6 db dark-blue">Program 1 Day 3 - 01/08</span>
-                  <span class="f4 fw4 db dark-blue">Medium Hexagon, LLC</span>
+                  <span class="f6 db">Program 1 Day 3 - 01/08</span>
+                  <span class="f5 fw5 db">The positioning of text within the page margins. Alignment</span>
                 </div>
               </li>
 
@@ -130,7 +132,10 @@
       </div>
     </div>
   </section>
-  <footer class="cf w-100 near-white washed-blue shadow-5 mt5">
+  <footer class="cf w-100 bg-light-gray
+ lightest-blue
+
+ shadow-3 mt5">
     <div class="w-80 center tc pv4-ns">
       <div class="cf">
         <div class="f2 f3-ns b">FOOTER</div>
