--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -1,88 +1,34 @@
 <div class="wrapper">
-  <header class="cf w-100 pa3 ph6-ns bg-light-gray">
-    <div class="cf">
-      <div class="db dt-ns mw9-l center w-100 b--black-40 bb pv3">
-        <div class="fl w-20 tl">
-          <router-link tag="a" :to="{ name: 'landingpage' }" class="dib f5 f4-ns fw6 mt0 mb1 link black-70" title="Home">
-            Logo
-          </router-link>
-        </div>
-        <div class="w-80 fr">
-          <nav class="tr mt2 mt0-ns menu-header">
-            <router-link tag="a" :to="{ name: 'dashboard' }" class="f5 fw6 link black-70 mr2 mr3-m mr4-l active">
-              Home
-            </router-link>
-            <router-link tag="a" :to="{ name: 'dashboard' }" class="f5 fw6 link black-70 mr2 mr3-m mr4-l dib">
-              About
-            </router-link>
-            <router-link tag="a" :to="{ name: '/' }" class="f6 fw6 hover-blue link black-70 mr2 mr3-m mr4-l dib">
-              Menu
-            </router-link>
-            <router-link tag="a" :to="{ name: '/' }" class="f5 fw6 link black-70 mr2 mr3-m mr4-l dib">
-              Menu
-            </router-link>
-            <router-link tag="a" :to="{ name: '/' }" class="f5 fw6  link black-70 mr2 mr3-m mr4-l dn dib-l">
-              Menu
-            </router-link>
-            <router-link tag="a" :to="{ name: '/' }" class="f5 fw6 link black-70 mr2 mr3-m mr4-l dn dib-l">
-              Menu
-            </router-link>
-          </nav>
-        </div>
+  <section class="dt w-100 mw8 ph3 ph0-ns center">
+    <div class="cf db mv5">
+      <div class="w-50 fl pt5-l pt3-m pt2">
+        <h1 class="f4 f1-l f1-m black w-50-l tr fr mt0-ns right--2 relative">Feel more
+        confident </h1>
+        <a href="/"
+           class="f5 f5-l f5-m  fw4 blue fl no-underline w-100  tr pr0 pr5-l pr5-m"> Read More <i
+          class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a>
+      </div>
+      <div class="w-50 fl"><img src="http://tachyons.io/img/super-wide.jpg" alt="A bright blue sky" class="w-100"/>
       </div>
     </div>
-  </header>
-  <section class="cf w-100 pa3 ph6-ns bg-light-gray white relative vh-50" id="">
-    <div class="mw9 mw9-ns center tl">
-      <div class="db fr mw6-l w-100 center bg-white black pv2 ph3 ph6-l ph6-m absolute bottom-0 right-0 tl">
-        <h1 class="f1 f1-ns black mb0">Welcome </h1>
-        <p class="lh-copy-l black mt0"> Take your first steps to become more physically active
-        </p>
-        <div class="ph3">
-          <a class="f4 b link dim br1 ph4 pv2 mb2 dib white bg-light-blue" href="#0">Sign up here</a>
-        </div>
+    <div class="cf db mv5">
+      <div class="w-50 fl"><img src="http://tachyons.io/img/super-wide.jpg" alt="A bright blue sky" class="w-100"/>
+      </div>
+      <div class="w-50 fl pt5-l pt3-m pt2">
+        <h1 class="f4 f1-l f1-m black w-60-l tl fl mt0-ns left--2 relative">Increase your wellbeing </h1>
+        <a href="/"
+           class="f5 f5-l f5-m  fw4 blue fl no-underline w-100  tl pr0 pr5-l pr5-m"> Read More <i
+          class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a>
       </div>
     </div>
-  </section>
-  <section class="cf w-100 pa3 ph5-m ph6-ns  black" id="">
-    <div class="mw9 mw9-ns center tl">
-      <div class="dt mw9 center pt0 pb5 pv5-m pv4-ns">
-        <div class="db dtc dtc-ns v-mid ph2 pr0-ns pl0-ns">
-          <h1 class="f4 f1-l f1-m black w-50-l tr fr mt0-ns relative right--2">Feel more confident </h1>
-          <div class="cf">
-            <a href="/"
-               class="f5 f4-l f4-m  fw6 light-blue fl no-underline w-100  tr pr0 pr5-l pr5-m"> Read More <i
-              class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a></div>
-        </div>
-        <div class="db dtc dtc-ns v-mid-ns w-60 w-50-l w-50-m">
-          <img src="http://tachyons.io/img/super-wide.jpg" alt="A bright blue sky" class="w-100" />
-        </div>
+    <div class="cf db mv5">
+      <div class="w-50 fl pt5-l pt3-m pt2">
+        <h1 class="f4 f1-l f1-m black w-50-l tr fr mt0-ns right--2 relative">Change your life </h1>
+        <a href="/"
+           class="f5 f5-l f5-m  fw4 blue fl no-underline w-100  tr pr0 pr5-l pr5-m"> Read More <i
+          class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a>
       </div>
-
-      <div class="dt mw9 center pt0 pb5 pv5-m pv4-ns">
-        <div class="db dtc dtc-ns v-mid-ns w-60 w-50-l w-50-m">
-          <img src="http://tachyons.io/img/super-wide.jpg" alt="A bright blue sky" class="w-100" />
-        </div>
-        <div class="db dtc dtc-ns v-mid ph2 pr0-ns pl0-ns">
-          <h1 class="f4 f1-l f1-m black w-60-l tl fl mt0-ns relative left--2">Increase your wellbeing</h1>
-          <div class="cf">
-            <a href="/"
-               class="f5 f4-l f4-m fw6 light-blue fl no-underline w-100 pl0 pl4-l pl4-m"> Read More <i
-              class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a></div>
-        </div>
-      </div>
-
-      <div class="dt mw9 center pt0 pb5 pv5-m pv4-ns">
-        <div class="db dtc dtc-ns v-mid ph2 pr0-ns pl0-ns">
-          <h1 class="f4 f1-l f1-m black w-40-l tr fr mt0-ns relative right--2">Change your life</h1>
-          <div class="cf">
-            <a href="/"
-               class="f5 f4-l f4-m  fw6 light-blue fl no-underline w-100 tr pr0 pr5-l pr5-m"> Read More <i
-              class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a></div>
-        </div>
-        <div class="db dtc dtc-ns v-mid-ns w-60 w-50-l w-50-m">
-          <img src="http://tachyons.io/img/super-wide.jpg" alt="A bright blue sky" class="w-100" />
-        </div>
+      <div class="w-50 fl"><img src="http://tachyons.io/img/super-wide.jpg" alt="A bright blue sky" class="w-100"/>
       </div>
     </div>
   </section>
@@ -120,6 +66,9 @@
             more
             than 2000 participants</p>
         </div>
+        <a class="f6 link dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy" href="/">
+          Get started now
+        </a>
       </div>
     </div>
   </section>
