--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -1,21 +1,21 @@
 <div class="wrapper">
-  <section class="dt w-100 mw8 ph3 ph0-ns center">
+  <section class="dt w-100 mw8 ph3 ph3-m ph3-l center">
     <div class="cf db mv5">
       <div class="w-50 fl pt5-l pt3-m pt2">
         <h1 class="f4 f1-l f1-m black w-50-l tr fr mt0-ns right--2 relative">Feel more
-        confident </h1>
+          confident </h1>
         <a href="/"
            class="f5 f5-l f5-m  fw4 blue fl no-underline w-100  tr pr0 pr5-l pr5-m"> Read More <i
           class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a>
       </div>
-      <div class="w-50 fl"><img src="http://tachyons.io/img/super-wide.jpg" alt="A bright blue sky" class="w-100"/>
+      <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
       </div>
     </div>
     <div class="cf db mv5">
-      <div class="w-50 fl"><img src="http://tachyons.io/img/super-wide.jpg" alt="A bright blue sky" class="w-100"/>
+      <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
       </div>
-      <div class="w-50 fl pt5-l pt3-m pt2">
-        <h1 class="f4 f1-l f1-m black w-60-l tl fl mt0-ns left--2 relative">Increase your wellbeing </h1>
+      <div class="w-50 fl pt5-l pt3-m pt2 relative">
+        <h1 class="f4 f1-l f1-m black w-70-l tl fl mt0-ns left--2 relative">Increase your wellbeing </h1>
         <a href="/"
            class="f5 f5-l f5-m  fw4 blue fl no-underline w-100  tl pr0 pr5-l pr5-m"> Read More <i
           class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a>
@@ -28,15 +28,15 @@
            class="f5 f5-l f5-m  fw4 blue fl no-underline w-100  tr pr0 pr5-l pr5-m"> Read More <i
           class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a>
       </div>
-      <div class="w-50 fl"><img src="http://tachyons.io/img/super-wide.jpg" alt="A bright blue sky" class="w-100"/>
+      <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
       </div>
     </div>
   </section>
-  <section class="cf center w-100 ph3 ph6-ns bg-washed-blue black" id="features">
+  <section class="cf center w-100 ph3 ph6-ns gradient-h" id="features">
     <div class="mw8 center tl bt b--lightest-blue">
       <div class="cf mt0 mb5 tc">
         <div class="w-100-l">
-          <h1 class="f1 black">How it works</h1>
+          <h1 class="f1 white">How it works</h1>
         </div>
         <div class="w-90-m w-100-ns w-30-l  center tl">
           <div class="numberlist">
@@ -48,7 +48,7 @@
             </ol>
           </div>
           <div class="w-90-m w-100-ns w-90-l  center">
-            <p class="lh-copy-l black w-90-l"> Discover opportunities to exercise in your daily routine.
+            <p class="lh-copy-l white w-90-l"> Discover opportunities to exercise in your daily routine.
             </p>
           </div>
         </div>
@@ -56,8 +56,8 @@
     </div>
   </section>
   <section class="cf center w-100 ph3 ph6-ns bg-white black" id="joinnow">
-    <div class="mw8 center tl bt b--lightest-blue">
-      <div class="cf mt0 mb5 tc bb b--lightest-blue pb4">
+    <div class="mw8 center tl">
+      <div class="cf mt0 mb5 tc  pb4">
         <div class="w-100-l">
           <h1 class="f1 black">Join now for free</h1>
         </div>
@@ -72,104 +72,128 @@
       </div>
     </div>
   </section>
-  <section class="cf w-100 pa3 ph6-ns bg-navy white" id="saying">
-    <div class="mw9 center tl">
+  <section class="cf w-100 ph0 ph6-l bggrey-light black" id="saying">
+    <div class="dt w-100 mw8 ph3 ph3-m ph3-l pb5 center tl">
       <div class="cf pt5">
-        <article class="pv2 fl w-90 w-30-l pr0 pr2-l">
+        <article class="pv2 fl w-100 w-50-l w-90-m pr0 pr2-l">
           <h1 class="f1 f1-ns fw6">What people are saying</h1></article>
       </div>
       <div class="cf mt4">
-        <article class="pv2 fl w-100 w-50-l pr0 pr2-l">
-          <h3 class="f3 b w-90-l mt0">
-            "This is a good easy programme that anyone can fit into their day"
-          </h3>
-        </article>
-        <article class="pv2 fl w-100 w-50-l pl0 pl2-l">
-          <h3 class="f3 fw3 w-90-l mt0">
-            "I really enjoyed the programme, for once the day started up with me"
-          </h3>
-        </article>
-      </div>
-      <div class="cf">
-        <article class="pv2 fl w-100 w-50-l pr0 pr2-l">
-          <h3 class="f3 f3-ns fw3">"Do it, it works"
-          </h3>
-        </article>
-        <article class="pv2 fl w-100 w-50-l pl0 pl2-l">
-          <div class="f3 b w-90-l mt4">
-            "This programme lets you make small changes that will change your life"
-          </div>
-        </article>
-      </div>
-      <div class="cf mt2">
-        <article class="pv2 fl w-100 w-50-l pl0 pl2-l">
-          <h3 class="f3 fw6 w-90-l">
-            "Big thanks for getting me to focus"
-          </h3>
-        </article>
-        <article class="pv2 fl w-100 w-50-l pr0 pr2-l">
-          <h3 class="f3 f3-ns fw3 mb2">"Makes you more aware of everyday actions you can do"
-          </h3>
-        </article>
-      </div>
-      <div class="cf mt2">
-        <article class="pv2 fl w-100 w-50-l pl0 pl2-l">
-          <h3 class="f3 fw3 w-70-l">
-            "I like the daily prompts, the encouragement and the ideas. It helped me to get up and moved a bit more.
-            Thank you!"
-          </h3>
-        </article>
-        <article class="pv2 fl w-100 w-50-l pr0 pr2-l">
-          <h3 class="f3 f3-ns fw3">"Makes you more aware of everyday"
-          </h3>
-          <h3 class="f3 f3-ns fw3">"Makes you more aware of everyday"
-          </h3>
-        </article>
-      </div>
-      <div class="cf mt2">
-        <article class="pv2 fl w-100 w-50-l pl0 pl2-l">
-          <h3 class="f3 fw6 w-90-l">
-            "This programme lets you make small changes that will change your life"
-          </h3>
-        </article>
-        <article class="pv2 fl w-100 w-50-l pr0 pr2-l">
-          <h3 class="f3 f3-ns fw3 mb2">"Makes you more aware of everyday actions you can do"
-          </h3>
-        </article>
-      </div>
-      <div class="cf mt2">
-        <article class="pv2 fl w-100 w-50-l pl0 pl2-l">
-          <h3 class="f3 fw3 w-70-l">
-            "I like the daily prompts, the encouragement and the ideas. It helped me to get up and moved a bit more.
-            Thank you!"
-          </h3>
-        </article>
-        <article class="pv2 fl w-100 w-50-l pr0 pr2-l">
-          <h3 class="f3 f3-ns fw3">"Makes you more aware of everyday"
-          </h3>
-          <h3 class="f3 f3-ns fw3">"Makes you more aware of everyday"
-          </h3>
-        </article>
-      </div>
-      <div class="cf mt2">
-        <article class="pv2 fl w-100 w-50-l pl0 pl2-l">
-          <h3 class="f3 fw3 w-90-l">
-            "I like the daily prompts, the encouragement"
-          </h3>
-        </article>
-        <article class="pv2 fl w-100 w-50-l pr0 pr2-l">
-          <h3 class="f3 f3-ns fw3">"Makes you more aware of everyday"
-          </h3>
-          <h3 class="f3 f3-ns fw3">"Makes you more aware of everyday"
-          </h3>
+        <div class="w-100 w-50-l w-50-m fl">
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
+                "This is a good easy programme that anyone can fit into their day"
+              </h3>
+            </div>
+          </article>
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
+                "I really enjoyed the programme, for once the day started up with me"
+              </h3>
+            </div>
+          </article>
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
+                "This is a good easy programme that anyone can fit into their day"
+              </h3>
+            </div>
+          </article>
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
+                "I really enjoyed the programme, for once the day started up with me"
+              </h3>
+            </div>
+          </article>
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
+                "This is a good easy programme that anyone can fit into their day"
+              </h3>
+            </div>
+          </article>
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
+                "I really enjoyed the programme, for once the day started up with me"
+              </h3>
+            </div>
+          </article>
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
+                "This is a good easy programme that anyone can fit into their day"
+              </h3>
+            </div>
+          </article>
+        </div>
+        <div class="w-100 w-50-l w-50-m fl">
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
+                "This is a good easy programme that anyone can fit into their day"
+              </h3>
+            </div>
+          </article>
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
+                "I really enjoyed the programme, for once the day started up with me"
+              </h3>
+            </div>
+          </article>
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
+                "This is a good easy programme that anyone can fit into their day"
+              </h3>
+            </div>
+          </article>
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
+                "I really enjoyed the programme, for once the day started up with me"
+              </h3>
+            </div>
+          </article>
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
+                "This is a good easy programme that anyone can fit into their day"
+              </h3>
+            </div>
+          </article>
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
+                "I really enjoyed the programme, for once the day started up with me"
+              </h3>
+            </div>
+          </article>
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
+                "This is a good easy programme that anyone can fit into their day"
+              </h3>
+            </div>
+          </article>
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
+                "I really enjoyed the programme, for once the day started up with me"
+              </h3>
+            </div>
+          </article>
           <a href="/"
-             class="f3 fw6 white cf no-underline fl mt5 pb5"><i
-            class=""><img src="../../assets/images/romove-icon.png"/></i> Read More</a>
-        </article>
+             class="f5 f5-l f5-m  fw6 dark-blue fl no-underline w-100  tl pl0 pl3-l pl3-m mt3"> Read More</a>
+        </div>
       </div>
     </div>
   </section>
-  <footer class="cf w-100 pa3 ph6-ns bg-washed-blue black vh-50" id="feafooter">
+  <footer class="cf w-100 pa3 ph6-ns gradient-right white vh-50" id="feafooter">
     <div class="mw8 center tl">
       <div class="cf pt5">
         <div class="f3 f3-ns b w-30">Footer</div>
